--- a/.github/workflows/prStaging.yml
+++ b/.github/workflows/prStaging.yml
@@ -18,6 +18,11 @@ jobs:
       postgres:
         # Docker Hub image
         image: postgres:latest
+
+        env:
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         # Set health checks to wait until postgres has started
         ports:
           # Maps tcp port 5432 on service container to the host
