workflow(github): fix env in workflow for stagin

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -33,6 +33,12 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+    env:
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
+
     steps:
       - name: "Init repository"
         uses: actions/checkout@v2
